# A01633021_robotica_movil

dijkstra/: CMakeLists.txt  randomGraph.h
dijkstra/DijkstraForStudents/: dijkstra.c  dijkstra.h  dijkstra.in  dijkstraClient.c  vancouverToMiami.in
dijkstra/include/: dijkstra.h  menu.h  randomGraph.h
dijkstra/src/: dijkstra.c  menu.c  (+2 more)
ex_parcial_1/: CMakeLists.txt  accelerometer_x.txt  accelerometer_y.txt
ex_parcial_1/data/: accelerometer_z.txt  bode_magnitude_conv_x.txt  bode_magnitude_conv_y.txt  bode_magnitude_conv_z.txt  bode_magnitude_filter.txt  bode_magnitude_x.txt  bode_magnitude_z.txt  conv_x.txt  conv_y.txt  conv_z.txt  filtro.txt  magnitude_y.txt  phase_filter.txt  phase_x.txt  phase_y.txt  phase_z.txt
ex_parcial_1/includes/: convolution.hpp  fourier.hpp  read_file.hpp
ex_parcial_1/src/: convolution.cpp  examen_parcial_1.cpp  fourier.cpp  read_file.cpp
ex_parcial_1/tests/: convolution_test.cpp  fourier_test.cpp  read_file_test.cpp
ex_parcial_2/: CMakeLists.txt  tiktok.csv
ex_parcial_2/data/: efector_1.txt  efector_2.txt  efector_3.txt  efector_4.txt  efector_5.txt  error_1.txt  error_2.txt  error_3.txt  error_4.txt  error_5.txt  joints_1.txt  joints_2.txt  joints_3.txt  joints_4.txt  joints_5.txt  trajectory_1.txt  trajectory_2.txt  trajectory_3.txt  trajectory_4.txt  trajectory_5.txt
ex_parcial_2/include/: A01633021.hpp  OP3_Arm.hpp
ex_parcial_2/src/: A01633021.cpp  OP3_Arm.cpp  main.cpp  separar.cpp  test.cpp
ex_parcial_2/tests/: test.cpp
practica2/: CMakeLists.txt
practica3/: CMakeLists.txt
practica3/src/: counter.cpp  hangman.cpp  occurrence.cpp  words.cpp
practica4/: CMakeLists.txt
practica5/: CMakeLists.txt
practica6/: CMakeLists.txt
practica6/include/: bank.hpp  client.hpp  group.hpp  node_linkedList.hpp  students.hpp
practica6/src/: bank.cpp  client.cpp  group.cpp  main_bank.cpp  node_linkedList.cpp  node_linkedList.tpp  students.cpp  students_main.cpp
practica7/: CMakeLists.txt
practica7/include/: drink.hpp  market.hpp  product.hpp  vegetable.hpp
practica7/src/: drink.cpp  main_product.cpp  market.cpp  product.cpp  vegetable.cpp
reports/: CMakeLists.txt
reports/data/: reportCanada(2.2).txt  reportHorses(2.3).txt  reportRegion(2.1).txt
reports/include/: AscBehaviour.hpp  CompareBehaviour.hpp  Control.hpp  DescBehaviour.hpp  Map.hpp  Record.hpp  ReportCanadaRegion.hpp  ReportData.hpp  ReportGenerator.hpp  ReportHorses.hpp  ReportRegion.hpp
reports/src/: Control.cpp  Record.cpp  ReportCanadaRegion.cpp  ReportGenerator.cpp  ReportHorses.cpp  ReportRegion.cpp  main.cpp
reports/test/: test_Map.cpp  test_Record.cpp  test_ReportData.cpp  test_reports.cpp
(+7 files in other folders)
